Fix header centering on mobile

--- a/app/components/Header/header-style.scss
+++ b/app/components/Header/header-style.scss
@@ -62,3 +62,9 @@
     margin-left: 25px;
   }
 }
+
+@media only screen and (max-width: 385px) {
+  .icon-info-container {
+    margin-left: 0;
+  }
+}
